--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
-# Full python app image
-FROM python:3.14.2
+# Full python app image: conform this to GDAL requirements, or run secondary venv for 3.11? Hmm
+FROM python:3.14.2 
 
 # Set the working directory inside the container
 WORKDIR /app
